--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,7 @@ h1{
     width: 100%;
 }
 .card-item img{
+    max-width: 100%;
     transition: .3s ease-out;
 }
 .card-item img:hover{
@@ -257,10 +258,6 @@ h1{
     .container-left {
         padding-inline: var(--container_padding);
     }
-
-    .text_xxl {
-        font-size: 36px;
-    }
     h2 br{display: none;}
     .mob-text-center{
         text-align: center;
@@ -289,5 +286,25 @@ h1{
     }
     .counter-box {
         padding: 15px;
+    }
+    #cards .flex{
+        gap: 100px;
+        row-gap: 80px;
+    }
+    #cards .card-item:nth-child(even) {
+        padding-top:0px;
+    }
+    .form-flex > div:first-child, .form-flex > div:last-child{
+        width: 100%;
+    }
+    #reviews .slick-slider {
+        padding-bottom: 0 !important;
+    }
+    #reviews img {
+        margin: auto;
+    }
+    #reviews .slick-dots{
+        bottom: -70px;
+        text-align: center;
     }
 }
