--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 h1{
-    line-height: 1.9;
+    line-height: 1.6;
 }
 
 body{
@@ -10,6 +10,12 @@ body{
     overflow: hidden;
     cursor: none;
     min-height: 100vh;
+    display: flex;
+}
+
+#hero .container,
+#counters .container{
+    max-width: calc(100vw - 2 * 5vw);
 }
 
 #hero:hover .cursor{
@@ -17,16 +23,25 @@ body{
     height: 150px;
     width: 150px;
 }
+@media screen and (max-width: 1366px) and (hover: hover){
+    #hero:hover .cursor{
+        width: 100px;
+        height: 100px;
+    }
+}
+
 
 .blur {
     position: absolute;
     top: 0;
     left: 0;
+    pointer-events: none;
 }
 .blur2 {
     position: absolute;
     top: 15%;
     left: 10%;
+    pointer-events: none;
 }
 
 .swiper-slide{
@@ -60,9 +75,9 @@ body{
     background-color: #fff;
 }
 
-#reviews{
+/* #reviews{
     padding-bottom: 20px;
-}
+} */
 
 #counters .flex:not(.three-equal-col){
     display: flex;
@@ -77,11 +92,14 @@ body{
 
 .flex.three-equal-col {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: space-evenly;
 }
 .counter-box{
     padding: 20px;
     border-radius: 12px;
+    cursor: default;
+    transition: 0.3s ease;
 }
 .counter-box:hover{
     box-shadow: -6px 6px 15px 0px #00000014;
@@ -107,10 +125,10 @@ body{
     border-radius: 25px;
 }
 .counter-box.special .number{
-    font-size: 178px;
+    font-size: 120px;
 }
 .counter-box.special p{
-    font-size: 44px;
+    font-size: 24px;
 }
 
 .service-box {
@@ -168,6 +186,7 @@ body{
     width: 320px;
     color: #fff;
     background-color: var(--blue);
+    box-shadow: none;
 }
 .service-box:hover img{
     rotate: 180deg;
@@ -224,6 +243,7 @@ body{
     transition: .3s;
     height: fit-content;
     padding-bottom: 30px;
+    display: none;
 }
 .card-item:hover{
     box-shadow: 26px 10px 16px 0px #0000000D;
