--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,11 @@ body{
     max-width: calc(100vw - 2 * 5vw);
 }
 
+#cards .container{
+    max-width: calc(100vw - 2 * 10.9375vw);
+}
+
+
 #hero:hover .cursor{
     opacity: 1;
     height: 150px;
@@ -228,37 +233,46 @@ body{
 }
 
 #cards .flex{
+    flex-wrap: wrap;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 200px;
-    row-gap: 0;
+    margin: 0 auto;
+    width: 63.75vw;
 }
 #cards .card-item:nth-child(odd){
-    padding-top: 120px;
+    padding-top: 15%;
 }
 .card-item{
-    max-width: 550px;
-    width: 100%;
     transition: .3s;
     height: fit-content;
     padding-bottom: 30px;
     display: none;
+    width: 27vw;
+    min-height: 54.1666666667vw;
 }
-.card-item:hover{
+/* .card-item:hover{
     box-shadow: 26px 10px 16px 0px #0000000D;
     scale: 1.01;
-}
+} */
 .card-item img{
     max-width: 100%;
     transition: .3s ease-out;
 }
-/* .card-item img:hover{
+.card-item img:hover{
     transform: scale(1.04)!important;
-} */
+}
+.card-item h3{
+    margin-top: 10px;
+    line-height: 1.875rem;
+    font-size: 1.375rem;
+    padding-bottom: 10px;
+}
 .card-item p{
     color: var(--grey);
-    font-weight: 500;
+    /* font-weight: 500; */
+    font-size: 16px;
+    border-bottom: 1px solid rgba(226,228,233,.5);
+    margin-bottom: 30px;
 }
 
 .testimonialSlider .slick-slide{
