--- a/css/global.css
+++ b/css/global.css
@@ -34,8 +34,8 @@ section{
 }
 /* start header */
 .header {
-    position: -webkit-sticky;
-    position: sticky;
+    /* position: -webkit-sticky; */
+    position: fixed;
     left: 0;
     top: 0;
     display: flex;
@@ -44,8 +44,15 @@ section{
     height: 80px;
     z-index: 999;
     /* background-color: #fff; */
-    background-color: transparent;
+    /* background-color: transparent; */
+    background-color: rgba(248,250,252,.9);
+    backdrop-filter: blur(13px);
+    -webkit-backdrop-filter: blur(13px);
+    transition: .6s ease-in-out;
     /* box-shadow: 0 0 25px #0000001a; */
+  }
+  .header.scrollup{
+    top: -80px;
   }
 .header.white{
     background-color: #fff;
@@ -250,7 +257,7 @@ section{
 }
 
 .text_xxl{
-    font-size: 56px;
+    font-size: 50px;
 }
 
 .text_xxxl{
