--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,8 @@ body{
 #cards .container,
 #counters .container,
 #web-technologies .container,
-#why .container{
+#why .container,
+#contact .container{
     max-width: calc(100vw - 2 * 10.9375vw);
 }
 
@@ -186,7 +187,7 @@ body{
 }
 .service-box h3{
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 600;
 }
 .servicesSliderTwo .swiper-slide-active,
 .servicesSliderTwo .splide__slide.is-active{
@@ -289,13 +290,14 @@ body{
     overflow: hidden;
 }
 .testimonialSlider .name{
-    font-size: 36px;
-    font-weight: bold;
+    font-size: 32px;
+    font-weight: 600;
     padding-bottom: 16px;
 }
 .testimonialSlider p{
     color: #767676;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 1.5;
 }
 .testimonialSlider p span, .testimonialSlider p a{
     font-size: inherit;
@@ -304,7 +306,6 @@ body{
 }
 .testimonialSlider .designation{
     color: var(--blue);
-    font-size: 32px;
     padding-top: 28px;
     font-weight: 600;
 }
@@ -313,19 +314,20 @@ body{
     background-image: url(../img/testimonial.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    padding: 14px 0px 34px 0px;
+    padding: 14px 0px 22px 0px;
     display: flex;
     justify-content: flex-start;
     background-position: left;
     margin-bottom: 10px;
 }
 .testimonialSlider .image img{
-    padding-left: 30px;
+    padding-left: 22px;
+    width: 100px;
 }
 
 .form-flex{
     display: flex;
-    gap: 20px;
+    gap: 100px;
 }
 .form-flex > div:first-child{
     width: 55%;
@@ -336,7 +338,9 @@ body{
 
 .icon-box{
     display: flex;
-    gap: 25px;
+    gap: 18px;
+    align-items: center;
+    line-height: 1.5;
 }
 .icon-box a{
     text-decoration: none;
@@ -345,7 +349,7 @@ body{
 .contact-details{
     display: flex;
     justify-content: space-between;
-    margin-right: 60px;
+    /* margin-right: 60px; */
 }
 
 .gap-8{
