--- a/css/global.css
+++ b/css/global.css
@@ -25,6 +25,7 @@
     margin: 0;
     font-family: 'Metropolis', sans-serif;
     font-size: 18px;
+    line-height: 1.4;
 }
 
 :root{
@@ -257,7 +258,8 @@ section{
 }
 
 .text_xs{
-    font-size: 22px;
+    font-size: 20px;
+    line-height: 1.4;
 }
 
 .text_reg{
@@ -286,6 +288,7 @@ section{
 
 .text_xxxl{
     font-size: 62px;
+    line-height: 1.3;
 }
 
 .regular{
@@ -374,7 +377,7 @@ section{
 
 .grid.two-equal-col{
     display: grid;
-    gap: 15px;
+    gap: 45px;
     grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid.three-equal-col{
