--- a/css/index.css
+++ b/css/index.css
@@ -13,25 +13,29 @@ body{
     display: flex;
 }
 
-#hero .container
-{
-    max-width: calc(100vw - 2 * 5vw);
+@media(min-width: 1024px){
+    #hero .container
+    {
+        max-width: calc(100vw - 2 * 5vw);
+    }
+    
+    #cards .container,
+    #counters .container,
+    #web-technologies .container,
+    #why .container,
+    #contact .container{
+        max-width: calc(100vw - 2 * 10.9375vw);
+    }
+    
+    .container-left {
+        margin-left: calc((100% - calc(100vw - 2 * 10.9375vw)) / 2);
+    }
+    .container-right {
+        margin-right: calc((100% - calc(100vw - 2 * 10.9375vw)) / 2);
+    }
 }
 
-#cards .container,
-#counters .container,
-#web-technologies .container,
-#why .container,
-#contact .container{
-    max-width: calc(100vw - 2 * 10.9375vw);
-}
 
-.container-left {
-    margin-left: calc((100% - calc(100vw - 2 * 10.9375vw)) / 2);
-}
-.container-right {
-    margin-right: calc((100% - calc(100vw - 2 * 10.9375vw)) / 2);
-  }
 
 #hero:hover .cursor{
     opacity: 1;
@@ -216,19 +220,27 @@ body{
 .circular-box{
     background-color: #4747EC14;
     border-radius: 50%;
-    width: 180px;
-    height: 180px;
+    width: 160px;
+    height: 160px;
 }
 
 #web-technologies{
     background-color: #fff;
 }
 #web-technologies .flex{
-    display: flex;
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: repeat(6, minmax(0, 1fr));
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 44px;
     row-gap: 56px;
+}
+
+@media(max-width: 1300px){
+    #web-technologies .flex{
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
 }
 /* #web-technologies .flex > div{
     width: calc(100%/6);
@@ -299,7 +311,7 @@ body{
 }
 .testimonialSlider p{
     color: #767676;
-    font-size: 16px;
+    font-size: 15px;
     line-height: 1.5;
 }
 .testimonialSlider p span, .testimonialSlider p a{
@@ -368,6 +380,39 @@ body{
 }
 
 @media(max-width: 767px){
+    #hero p.grey.pt_40.medium {
+        font-size: 120%;
+        line-height: 1.6;
+    }
+    #hero p.grey.pt_40.medium span{
+        font-size: inherit;
+    }
+    .blur2{
+        left: 0;
+    }
+    .servicesSliderOne .grid.two-equal-col{
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 10px;
+        text-align: left;
+    }
+    .servicesSliderOne .grid.two-equal-col > div:nth-child(2){
+        margin-inline: 30px;
+    }
+    #web-technologies .flex{
+        /* grid-template-columns: repeat(3, minmax(0, 1fr)); */
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    section#web-technologies {
+        padding-bottom: 10px;
+    }
+    section#why {
+        padding-bottom: 0;
+    }
+    .form-flex {
+        gap: 50px;
+    }
     #hero{
         text-align: center;
     }
@@ -393,8 +438,18 @@ body{
         padding-top: 0;
     }
     .circular-box{
-        width: 150px;
-        height: 150px;
+        width: 100px;
+        height: 100px;
+        margin: auto;
+    }
+    .circular-box img{
+        padding: 20px
+    }
+    .servicesSliderTwo {
+        display: none;
+    }
+    .container-right{
+        padding-right: 0;
     }
     #web-technologies .flex{
         justify-content: center;
@@ -404,10 +459,6 @@ body{
     }
     .testimonialSlider .name {
         font-size: 24px;
-    }
-    .testimonialSlider p {
-        color: #767676;
-        font-size: 16px;
     }
     .testimonialSlider .designation {
         font-size: 20px;
@@ -457,9 +508,25 @@ body{
     .counter-box {
         padding: 15px;
     }
-    #cards .flex{
+    /* #cards .flex{
         gap: 100px;
         row-gap: 60px;
+    } */
+    #cards .flex{
+        display: flex;
+        width: 100%;
+        margin-top: 60px;
+    }
+    .card-item{
+        width: 100%;
+        margin-bottom: 60px;
+    }
+    #cards h2.blue.regular.text_xl.pb_40 {
+        font-size: 28px;
+        padding-bottom: 30px;
+    }
+    #case-studies .card-item:last-child{
+        margin-bottom: 0;
     }
     #cards .card-item:nth-child(even) {
         padding-top:0px;
