--- a/css/global.css
+++ b/css/global.css
@@ -68,8 +68,8 @@ section{
     height: 80px;
     z-index: 999;
     /* background-color: #fff; */
-    /* background-color: transparent; */
-    background-color: rgba(248,250,252,.9);
+    background-color: transparent;
+    /* background-color: rgba(248,250,252,.9); */
     backdrop-filter: blur(13px);
     -webkit-backdrop-filter: blur(13px);
     transition: .6s ease-in-out;
@@ -79,8 +79,8 @@ section{
     top: -80px;
   }
 .header.white{
-    background-color: #fff;
-    box-shadow: 0 0 25px #0000001a;
+    background-color: rgba(248,250,252,.9);
+    /* box-shadow: 0 0 25px #0000001a; */
 }
   .header a.brand {
     padding-top: 10px;
