--- a/css/index.css
+++ b/css/index.css
@@ -196,6 +196,9 @@ body{
     font-size: 16px;
     font-weight: 600;
 }
+.servicesSliderTwo .splide__slide{
+    transition: 0.3s ease;
+}
 .servicesSliderTwo .swiper-slide-active,
 .servicesSliderTwo .splide__slide.is-active{
     width: 320px;
