--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ body{
     #hero .container
     {
         max-width: calc(100vw - 2 * 5vw);
+        width: 100%;
     }
     
     #cards .container,
@@ -25,6 +26,7 @@ body{
     #why .container,
     #contact .container{
         max-width: calc(100vw - 2 * 10.9375vw);
+        width: 100%;
     }
     
     .container-left {
@@ -35,6 +37,9 @@ body{
     }
 }
 
+#cards h2{
+    font-size: 3.3333333333vw;
+}
 
 
 #hero:hover .cursor{
