--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,18 @@ body{
 .servicesSliderTwo .splide__track{
     overflow: visible;
 }
+
+
+#case-studies{
+    padding-top: 200px;
+}
+
+@media screen and (max-width: 1366px){
+    #case-studies{
+        padding-top: 50px;
+    }
+    
+}
 @media(min-width: 1024px){
     #hero .container
     {
@@ -299,10 +311,17 @@ body{
     transform: scale(1.04)!important;
 }
 .card-item h3{
-    margin-top: 10px;
+    /* margin-top: 10px; */
+    margin-block-start: 1.71875vw;
     line-height: 1.875rem;
     font-size: 1.375rem;
     padding-bottom: 10px;
+}
+@media screen and (max-width: 1500px)
+{
+    .card-item h3{
+        margin-top: 10px;
+    } 
 }
 .card-item p{
     color: var(--grey);
