--- a/css/index.css
+++ b/css/index.css
@@ -284,6 +284,14 @@ body{
     padding-top: 12px;
 }
 
+.servicesSliderOne .splide__slide{
+    display: none;
+    transition: 0.3s ease;
+}
+.servicesSliderOne .splide__slide.is-visible{
+    display: block;
+}
+
 #cards .flex{
     flex-wrap: wrap;
     display: flex;
