--- a/css/global.css
+++ b/css/global.css
@@ -571,7 +571,20 @@ ul.slick-dots li button::before{
     margin: auto;
     margin-right: 0;
     cursor: default;
+    /* transition: 0.3s ease; */
 }
+.form.onview{
+    animation: scaleup 1s forwards;
+}
+
+
+@keyframes scaleup {
+    0%{scale: 1}
+    50%{scale: 1.05}
+    100%{scale: 1}
+}
+
+
 .form input:not([type="submit"]),
 .form textarea{
     font-size: 16px;
@@ -589,6 +602,7 @@ ul.slick-dots li button::before{
     box-shadow: -16px 16px 24px 0px #0000001A;
     background-color: #fff;
     position: relative;
+    margin-top: 20px;
 }
 .form.dark{
     border: 4px solid #262D8C;
