--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,25 @@ section:not(.hero){
     font-size: 3.3333333333vw;
 }
 
+#hero .grid .flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+#hero .container{
+    position: fixed;
+    right: 0;
+    left: 0;
+}
+
+footer{
+    background-color: #fff;
+    z-index: 1;
+    position: relative;
+}
+#services,  #cards, #why{
+    background-color: #f5f5f5;
+}
 
 #hero:hover .cursor{
     opacity: 1;
@@ -155,7 +174,7 @@ section:not(.hero){
     cursor: default;
     transition: 0.3s ease;
 }
-.counter-box:hover{
+.counter-box:hover, .counter-box.active{
     box-shadow: -6px 6px 15px 0px #00000014;
 }
 
@@ -265,6 +284,7 @@ section:not(.hero){
     border-radius: 50%;
     width: 160px;
     height: 160px;
+    margin: auto;
 }
 
 #web-technologies{
