--- a/css/global.css
+++ b/css/global.css
@@ -23,7 +23,8 @@
 *, html, body{
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Metropolis', sans-serif;
+    /* font-family: 'Metropolis', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 18px;
     line-height: 1.4;
     /* scroll-behavior: smooth; */
